# tug

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.md  Changelog.md  LICENSE  README.md  README.org
.chglog/: config.yml
app/: CMakeLists.txt  Rcpp-BTCS-2d.cpp  Rcpp-interface.R  Rcpp-interface.cpp  RcppFTCS.cpp  main_1D.cpp  main_2D.cpp  main_2D_const.cpp  main_2D_mdl.cpp
doc/: .gitignore  ADI_scheme.org  Implementation.org  ValidationHetDiff.org
docs_sphinx/: Boundary.rst  Diffusion.rst  Doxyfile.in  Grid.rst  Simulation.rst  conf.py  developer.rst  developper.rst  examples.rst  index.rst  theory.rst  user.rst  visualization.rst
docs_sphinx/_build/: vis.html
examples/: 2D_ADI_constant_Sr.cpp  Advection.cpp  BTCS_1D_proto_example.cpp  BTCS_2D_proto_example.cpp  CMakeLists.txt  CRNI_2D_proto_example.cpp  FTCS_1D_proto_example.cpp  FTCS_1D_sycl.cpp  FTCS_2D_proto_closed_mdl.cpp  FTCS_2D_proto_example.cpp  FTCS_2D_proto_example_mdl.cpp  FTCS_2D_sycl.cpp  Rcpp-interface.cpp  RcppFTCS.cpp  boundary_example1D.cpp  csv2eigen.cpp  csv2eigen.hpp  first_example.cpp  main_1D.cpp  meeting_example.cpp  profiling.cpp  profiling_openmp.cpp  profiling_speedup.cpp  pseudo_example.cpp  reference-FTCS_2D_closed.cpp  second_example.cpp
include/: BoundaryCondition.hpp  Diffusion.hpp  Solver.hpp
include/diffusion/: BTCSBoundaryCondition.hpp  BTCSDiffusion.hpp  BTCSUtils.hpp  BoundaryCondition.hpp
include/grid/: BTCSBoundaryCondition.hpp
include/tug/: Advection.hpp  Boundary.hpp  BoundaryCondition.hpp  Diffusion.hpp  Grid.hpp  Simulation.hpp  Solver.hpp  UniformAlpha.hpp  UniformGrid.hpp  tug.hpp
include/tug/Advection/: Advection.hpp  Velocities.hpp
include/tug/Core/: BTCS.hpp  BaseSimulation.hpp  FTCS.hpp  FTCS_Sycl.hpp  Matrix.hpp  TugUtils.hpp  Velocities.hpp
include/tug/Core/Numeric/: BTCS.hpp  FTCS.hpp  SimulationInput.hpp
include/tug/Datatypes/: FixedPoint.hpp
include/tug/Diffusion/: Diffusion.hpp
naaice/: BTCS_2D_NAAICE.cpp  CMakeLists.txt  NAAICE_dble_vs_float.cpp  README.md  README.org  alphax.csv  files.hpp.in  init_conc.csv
proto/: BTCS.ipynb  FTCS.ipynb
scripts/: Adi2D_Reference.R  Comp.R  Comp2D.R  HetDiff.R
scripts/gold/: HetDiff1.csv
scripts/hannes-philip/: FTCS.ipynb
src/: BTCS.cpp  BTCSBoundaryCondition.cpp  BTCSDiffusion.cpp  BTCSDiffusion.hpp  BTCSv2.cpp  Boundary.cpp  BoundaryCondition.cpp  CMakeLists.txt  FTCS.cpp  Grid.cpp  README.md  Schemes.hpp  Simulation.cpp  Solver.cpp  TugUtils.cpp  TugUtils.hpp  diffusion.cpp  diffusion.hpp  main.cpp  main_2D.cpp  test_class.cpp
src/grid/: BoundaryCondition.cpp
test/: CMakeLists.txt  FTCS_11_11_7000.csv  TestUtils.cpp  TestUtils.hpp  setup.cpp  simple.cpp  testAdvection.cpp  testBoundary.cpp  testBoundaryCondition.cpp  testDiffusion.cpp  testFTCS.cpp  testFixedPoint.cpp  testGrid.cpp  testSimulation.cpp  testSimulation.hpp.in  testVelocities.cpp
utils/: ci.Dockerfile  output-visualization.html
