# add_executable(FTCS_1D_proto_example FTCS_1D_proto_example.cpp)
# add_executable(FTCS_2D_proto_example FTCS_2D_proto_example.cpp)
# add_executable(BTCS_1D_proto_example BTCS_1D_proto_example.cpp)
# add_executable(BTCS_2D_proto_example BTCS_2D_proto_example.cpp)
# add_executable(CRNI_2D_proto_example CRNI_2D_proto_example.cpp)
# add_executable(reference-FTCS_2D_closed reference-FTCS_2D_closed.cpp)
# add_executable(profiling_openmp profiling_openmp.cpp)

# target_link_libraries(FTCS_1D_proto_example tug)
# target_link_libraries(FTCS_2D_proto_example tug)
# target_link_libraries(BTCS_1D_proto_example tug)
# target_link_libraries(BTCS_2D_proto_example tug)
# target_link_libraries(CRNI_2D_proto_example tug)
# target_link_libraries(reference-FTCS_2D_closed tug)
# target_link_libraries(profiling_openmp tug)

# add_executable(FTCS_2D_proto_example_mdl FTCS_2D_proto_example_mdl.cpp)
# add_executable(FTCS_2D_proto_closed_mdl FTCS_2D_proto_closed_mdl.cpp)
# target_link_libraries(FTCS_2D_proto_closed_mdl tug)
# target_link_libraries(FTCS_2D_proto_example_mdl tug)

find_package(IntelSYCL)

if(IntelSYCL_FOUND)
    add_executable(sycl_test FTCS_1D_sycl.cpp)
    target_link_libraries(sycl_test PRIVATE tug)
    target_compile_definitions(sycl_test PRIVATE TUG_ENABLE_SYCL)
    add_sycl_to_target(TARGET sycl_test SOURCES FTCS_1D_sycl.cpp)
endif()